Fixed fitting of grid on mobile

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,9 +1,13 @@
 .minesweeper {
-  height: 100vh;
-  width: 100vw;
-}
-.game {
-  border-radius: 20px 20px 0px 0px;
   height: 100%;
   width: 100%;
+}
+
+.menu {
+  height: 8%;
+}
+
+.game {
+  border-radius: 20px 20px 0px 0px;
+  height: 92%;
 }
